5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1724_2517.log
== TEST (2019-05-14 10:30:58) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
H=float(input())
i=0
while(H>0):
	H=H-(1/2)*9.8*i**2
	print(i)
	print(round(H,1))
	i=i+1
if(H<=0):
	print(i)
	print(0)
	
	
-- OUTPUT:
0
36.0
1
31.1
2
11.5
3
-32.6
4
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:32:44) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
H=float(input())
i=0
while(H>0):
	H=H-(1/2)*9.8*i**2
	print("t =",i)
	print(round("h =",H,1))
	i=i+1
if(H<=0):
	print(i)
	print(0)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round("h =",H,1))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:52:55) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
H=float(input())
i=0
while(H>0):
	H=H-(1/2)*9.8*i**2
	print("t =",i)
	print("t =",round(H,1))
	i=i+1
if(H<=0):
	print(i)
	print(0)
	
	
-- OUTPUT:
t = 0
t = 36.0
t = 1
t = 31.1
t = 2
t = 11.5
t = 3
t = -32.6
4
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:53:36) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
H=float(input())
i=0
while(H>0):
	H=H-(1/2)*9.8*i**2
	print("t =",i)
	print("H =",round(H,1))
	i=i+1
if(H<=0):
	print(i)
	print(0)
	
	
-- OUTPUT:
t = 0
H = 36.0
t = 1
H = 31.1
t = 2
H = 11.5
t = 3
H = -32.6
4
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:55:17) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
while(H>0):
	H=Ho-(1/2)*9.8*i**2
	print("t =",i)
	print("H =",round(H,1))
	i=i+1
if(H<=0):
	print(i)
	print(0)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(H>0):
NameError: name 'H' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:55:20) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
while(H>0):
	H=Ho-(1/2)*9.8*i**2
	print("t =",i)
	print("H =",round(H,1))
	i=i+1
if(H<=0):
	print(i)
	print(0)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(H>0):
NameError: name 'H' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:56:01) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
while(H>0):
	H=Ho-(1/2)*9.8*i**2
	print("t =",i)
	print("H =",round(H,1))
	i=i+1
if(H<=0):
	print(i)
	print(0)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(H>0):
NameError: name 'H' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:56:40) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
H=1
while(H>0):
	H=Ho-(1/2)*9.8*i**2
	print("t =",i)
	print("H =",round(H,1))
	i=i+1
if(H<=0):
	print(i)
	print(0)
	
	
-- OUTPUT:
t = 0
H = 36.0
t = 1
H = 31.1
t = 2
H = 16.4
t = 3
H = -8.1
4
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:57:33) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
H=1
while(H>0):
	print("t =",i)
	print("H =",round(H,1))
	H=Ho-(1/2)*9.8*i**2
	
	i=i+1
if(H<=0):
	print(i)
	print(0)
	
	
-- OUTPUT:
t = 0
H = 1
t = 1
H = 36.0
t = 2
H = 31.1
t = 3
H = 16.4
4
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:59:45) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
while(H>0):
	print("t =",i)
	print("H =",round(Ho,1))
	H=Ho-(1/2)*9.8*i**2
	
	i=i+1
if(H<=0):
	print(i)
	print(0)
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(H>0):
NameError: name 'H' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:00:31) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
H=0
while(H>=0):
	print("t =",i)
	print("H =",round(Ho,1))
	H=Ho-(1/2)*9.8*i**2
	
	i=i+1
if(H<=0):
	print(i)
	print(0)
	
	
-- OUTPUT:
t = 0
H = 36.0
t = 1
H = 36.0
t = 2
H = 36.0
t = 3
H = 36.0
4
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:01:31) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
H=0
while(H>=0):
	print("t =",i)
	print("H =",round(H,1))
	H=Ho-(1/2)*9.8*i**2
	
	i=i+1
if(H<=0):
	print(i-1)
	print(0)
	
	
-- OUTPUT:
t = 0
H = 0
t = 1
H = 36.0
t = 2
H = 31.1
t = 3
H = 16.4
3
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:03:21) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
H=0
while(H>=0):
	print("t =",i)
	H=Ho-(1/2)*9.8*i**2
	print("h =",round(H,1))
	
	
	i=i+1

	
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
t = 3
h = -8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:05:08) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
H=0
while(H>=0):
	if(H>=0):
		H=Ho-(1/2)*9.8*i**2
		print("t =",i)
	
		print("h =",round(H,1))
	
	
	i=i+1

	
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
t = 3
h = -8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:05:16) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
H=0
while(H>=0):
	if(H>=0):
		H=Ho-(1/2)*9.8*i**2
		print("t =",i)
	
		print("h =",round(H,1))
	
	
	i=i+1

	
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
t = 3
h = -8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:05:28) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
H=0
while(H>=0):
	if(H>=0):
		H=Ho-(1/2)*9.8*i**2
		print("t =",i)
	
		print("h =",round(H,1))
	
	
	i=i+1

	
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
t = 3
h = -8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:06:41) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
H=Ho-(1/2)*9.8*i**2
while(H>=0):
	
	H=Ho-(1/2)*9.8*i**2
	print("t =",i)
	
	print("h =",round(H,1))
	
	
	i=i+1

	
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
t = 3
h = -8.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:07:34) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
H=Ho-(1/2)*9.8*i**2
while(H>=0):
	
	
	print("t =",i)
	
	print("h =",round(H,1))
	
	H=Ho-(1/2)*9.8*i**2
	i=i+1
	
	
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 36.0
t = 2
h = 31.1
t = 3
h = 16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:08:37) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
H=Ho-(1/2)*9.8*i**2
while(H>=0):
	
	
	print("t =",i)
	
	print("h =",round(H,1))
	
	
	i=i+1
	H=Ho-(1/2)*9.8*i**2
	
	
-- OUTPUT:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:09:00) 
-- CODE:
#saida tempo que vai ser o meu contador em cada segundo
#altura no segundo 
#round 1 
Ho=float(input())
i=0
H=Ho-(1/2)*9.8*i**2
while(H>=0):
	
	
	print("t =",i)
	
	print("h =",round(H,1))
	
	i=i+1
	H=Ho-(1/2)*9.8*i**2
	
	
-- EXECUTION TIME:
0.113166
-- TEST CASE 1:
---- input:
36.0
---- correct output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
---- user output:
t = 0
h = 36.0
t = 1
h = 31.1
t = 2
h = 16.4
-- TEST CASE 2:
---- input:
11.5
---- correct output:
t = 0
h = 11.5
t = 1
h = 6.6
---- user output:
t = 0
h = 11.5
t = 1
h = 6.6
-- TEST CASE 3:
---- input:
1234.5
---- correct output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
---- user output:
t = 0
h = 1234.5
t = 1
h = 1229.6
t = 2
h = 1214.9
t = 3
h = 1190.4
t = 4
h = 1156.1
t = 5
h = 1112.0
t = 6
h = 1058.1
t = 7
h = 994.4
t = 8
h = 920.9
t = 9
h = 837.6
t = 10
h = 744.5
t = 11
h = 641.6
t = 12
h = 528.9
t = 13
h = 406.4
t = 14
h = 274.1
t = 15
h = 132.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
